feat: 글쓰기 기능 구현
- 프론트엔드 글쓰기 페이지 form으로 작업했습니다.
- 백엔드와 SQLite를 연동해서 이미지 및 데이터를 업로드하는 기능을 구현했습니다.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <main>
-        <div class="item-list">
+        <!-- <div class="item-list">
             <div class="item-list__img">
                 <img src="assets/choonsik.png" alt="">
             </div>
@@ -96,7 +96,7 @@
                 <div class="item-list__info-meta">석촌동 6시간 전</div>
                 <div class="item-list__info-price">150만원</div>
             </div>
-        </div>
+        </div> -->
     </main>
 
     <footer>
@@ -132,8 +132,9 @@
                 <div class="footer-icons__desc">나의 당근</div>
             </div>
         </div>
-        <div class="write-btn">+ 글쓰기</div>
+        <a class="write-btn" href="write.html">+ 글쓰기</a>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
 
